# some_sfml_simple_games

./: CMakeLists.txt  README.md
src/: Game.cpp  ShootTarget.cpp  ShooterTargetProjectiles.cpp  main.cpp
src/include/: Game.hpp  ShootTarget.hpp  ShooterTargetProjectiles.hpp
